...

object SignInScreenTestTags {
  const val APP_LOGO = "appLogo"
  const val LOGIN_TITLE = "loginTitle"
  const val LOGIN_MESSAGE = "loginMessage"
  const val LOGIN_WELCOME = "loginWelcome"
  const val LOGIN_BUTTON = "loginButton"
  const val LOGOUT_BUTTON = "logoutButton"
  const val END_SNACK_BAR = "snackBar"
  const val NO_NETWORK_MESSAGE = "noNetworkMessage"
}

@Composable
...
