...
    <string name="error_deleting_invitations">Failed to delete invitation</string>
    <string name="enter_invitation_code">Enter invitation code</string>
    <string name="join_button_text">Join</string>
    <string name="error_invitation_with_code_not_found">No invitation found such code".</string>
    <string name="error_invitation_already_used">This invitation has already been used.</string>
    <string name="error_invitation_expired">This invitation has expired.</string>
    <string name="error_joining_organization">Could not join the organization: it no longer exists or you are already a member.</string>
    <string name="error_invitation_code_illegal_input">
    Only letters and digits are allowed. The required code length is %1$d.
</string>
    <string name="invitation_joining_organization">Tempting to join organization…</string>


...

    <!-- Edit Organization -->
    <string name="error_loading_organization">Failed to load organization.</string>
    <string name="error_editing_organization">Failed to update organization.</string>

    <!-- Network -->
    <string name="network_error_message">A network error has occurred. Please check your internet connection and try again.</string>

</resources>
